overflow Fixed

--- a/Practice/style.css
+++ b/Practice/style.css
@@ -1,7 +1,15 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+} 
 
 img {
   max-width: 100%;
@@ -772,3 +780,4 @@ button a:hover {
   transform: translate(0%, 15800%);
   z-index: 2;
 }
+
